sign-up btn center alignment, removed from container to maintain central postion easily. fixed Walks Heading pos

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -33,6 +33,7 @@ color:#048a81;
 color:#b0b0a6;
 color:#1e1d10;
 color:#7e7a51;
+color:#aa6fb5;
 }
 /* background image */
 :root {
